Fixed WorkHistory Verizon bullet-points and incorportated OpenShift

--- a/htmx/static/style.css
+++ b/htmx/static/style.css
@@ -362,7 +362,7 @@ section p {
 	bottom: 35%;
 	right: 6%;
 	animation-delay: 3s;
-	background: #333;
+	background: #FFFFF0;
 }
 
 /* Tech logo styling */
